update notebook 8 agentes

--- a/AI/Notebook 7/nb7.ipynb
+++ b/AI/Notebook 7/nb7.ipynb
@@ -202,6 +202,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from copy import deepcopy\n",
+    "\n",
+    "def pl_fc_entails(base, q) :\n",
+    "    count = {}\n",
+    "\n",
+    "    for regla in base.reglas:\n",
+    "        count[regla.nombre] = len(regla.cuerpo)\n",
+    "    inferred = dict(zip(base.atomos, [False]*len(base.atomos)))\n",
+    "    queue = deepcopy(base.datos)\n",
+    "\n",
+    "    while len(queue) > 0:\n",
+    "        p = queue.pop()\n",
+    "\n",
+    "        if p == q:\n",
+    "            return True\n",
+    "\n",
+    "        elif inferred[p] == False:\n",
+    "            inferred[p] = True\n",
+    "\n",
+    "            for regla in base.reglas:\n",
+    "                if p in regla.cuerpo:\n",
+    "                    count[regla.nombre] -= 1\n",
+    "                    if count[regla.nombre] == 0:\n",
+    "                        queue.append(regla.cabeza)\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El átomo p se deduce de la base?: True\n",
+      "El átomo q se deduce de la base?: False\n",
+      "El átomo r se deduce de la base?: True\n",
+      "El átomo s se deduce de la base?: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_data = ['p', 'q', 'r', 's']\n",
+    "\n",
+    "def print_mydata(list_data):\n",
+    "    for data in list_data:\n",
+    "        result = pl_fc_entails(base_ejemplo, data)\n",
+    "        print(f\"El átomo {data} se deduce de la base?:\", result)\n",
+    "\n",
+    "print_mydata(list_data)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -252,6 +312,81 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# función and_search\n",
+    "def and_search(literales, base, camino):\n",
+    "    for literal in literales:\n",
+    "        plan = or_search(literal, base, camino)\n",
+    "        if plan == 'Failure':\n",
+    "            return 'Failure'\n",
+    "    return 'Success'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# función or_search\n",
+    "def or_search(head, base, camino):\n",
+    "    if base.test_objetivo(head):\n",
+    "        return 'Success'\n",
+    "    elif head in camino:\n",
+    "        return 'Sailure'\n",
+    "    reglas = base.reglas_aplicables(head)\n",
+    "    if not reglas:\n",
+    "        return 'Sailure'\n",
+    "    for regla in reglas:\n",
+    "        plan = and_search(regla.cuerpo, base, [head] + camino)\n",
+    "        if plan != 'Failure':\n",
+    "            return 'Success'    \n",
+    "    return 'Failure'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# función and_or_graph_search\n",
+    "def and_or_graph_search(objetivo, base):\n",
+    "    return or_search(objetivo, base, [])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El átomo p se deduce de la base?: Success\n",
+      "El átomo q se deduce de la base?: Sailure\n",
+      "El átomo r se deduce de la base?: Success\n",
+      "El átomo s se deduce de la base?: Success\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_data = ['p', 'q', 'r', 's']\n",
+    "\n",
+    "def print_mydata2(list_data):\n",
+    "    for data in list_data:\n",
+    "        result = and_or_graph_search(data, base_ejemplo)\n",
+    "        print(f\"El átomo {data} se deduce de la base?:\", result)\n",
+    "\n",
+    "print_mydata2(list_data)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -273,8 +408,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "5eba2f6daac758e0c4eb74cbbf3fd787eaf14bd08a71327f2f2275e3d00aa03b"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -288,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
