update notebook: detect wumpus

--- a/AI/Miniproyecto 2 - wumpus/notebooks/ambiente_trabajo.ipynb
+++ b/AI/Miniproyecto 2 - wumpus/notebooks/ambiente_trabajo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,14 @@
     "from time import sleep\n",
     "from IPython.display import clear_output\n",
     "import matplotlib.pyplot as plt\n",
-    "from busqueda import best_first_search, solucion"
+    "\n",
+    "from busqueda import best_first_search, solucion, breadth_first_search\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +47,8 @@
     "formulas += agente.brisa_pozo_wkb()\n",
     "formulas += agente.hedor_wumpus_wkb()\n",
     "formulas += agente.casilla_segura_wkb()\n",
+    "# formulas += agente.wumpus_muerto() # agregar: ya no importa el hedor del wumpus\n",
+    "# formulas += agente.caza_wumpus() # agregar: \n",
     "formulas += [f'en(0,0)_1', 'mirando_e_1', 'segura(0,0)']\n",
     "agente.base = LPQuery(formulas)\n",
     "agente.perceptos = W.para_sentidos()\n",
@@ -68,19 +72,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
     "def programaKB(self, DEB=False):\n",
     "    acciones = []\n",
     "    turno, casilla_actual, direccion, cas_seguras, cas_visitadas = self.cache_wkb()\n",
+    "\n",
     "    if DEB:\n",
+    "        print('')\n",
     "        print('Turno acutal:', turno)\n",
     "        print('Casilla actual:', casilla_actual)\n",
     "        print('Dirección actual:', direccion)\n",
     "        print('Casillas adyacentes seguras:', cas_seguras)\n",
     "        print('Casillas visitadas:', cas_visitadas)\n",
+    "        print('¿El oro ha sido tomado?: ', W.oro_tomado)\n",
+    "        print('¿El wumpus sigue con vida?: ', W.wumpus_vivo)\n",
+    "\n",
     "    if ASK(f'brillo_{turno}','success',self.base):\n",
     "        if DEB:\n",
     "            print('¡Oh, el oro!')\n",
@@ -122,14 +131,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Turno acutal: 1\n",
+      "Casilla actual: (0, 0)\n",
+      "Dirección actual: este\n",
+      "Casillas adyacentes seguras: [(1, 0), (0, 1)]\n",
+      "Casillas visitadas: [(0, 0)]\n",
+      "¿El oro ha sido tomado?:  False\n",
+      "¿El wumpus sigue con vida?:  True\n",
+      "Casillas opcionales: [(1, 0), (0, 1)]\n",
+      "El agente quiere ir a la casilla (1, 0)\n",
+      "\n",
+      "Turno acutal: 2\n",
+      "Casilla actual: (1, 0)\n",
+      "Dirección actual: este\n",
+      "Casillas adyacentes seguras: [(0, 0), (2, 0), (1, 1)]\n",
+      "Casillas visitadas: [(0, 0), (1, 0)]\n",
+      "¿El oro ha sido tomado?:  False\n",
+      "¿El wumpus sigue con vida?:  True\n",
+      "Casillas opcionales: [(2, 0), (1, 1)]\n",
+      "El agente quiere ir a la casilla (2, 0)\n",
+      "\n",
+      "Turno acutal: 3\n",
+      "Casilla actual: (2, 0)\n",
+      "Dirección actual: este\n",
+      "Casillas adyacentes seguras: [(1, 0), (3, 0), (2, 1)]\n",
+      "Casillas visitadas: [(0, 0), (1, 0), (2, 0)]\n",
+      "¿El oro ha sido tomado?:  False\n",
+      "¿El wumpus sigue con vida?:  True\n",
+      "Casillas opcionales: [(3, 0), (2, 1)]\n",
+      "El agente quiere ir a la casilla (2, 1)\n",
+      "\n",
+      "Turno acutal: 5\n",
+      "Casilla actual: (2, 1)\n",
+      "Dirección actual: norte\n",
+      "Casillas adyacentes seguras: [(1, 1), (2, 0)]\n",
+      "Casillas visitadas: [(0, 0), (1, 0), (2, 0), (2, 1)]\n",
+      "¿El oro ha sido tomado?:  False\n",
+      "¿El wumpus sigue con vida?:  True\n",
+      "Casillas opcionales: [(1, 1)]\n",
+      "El agente quiere ir a la casilla (1, 1)\n",
+      "\n",
+      "Turno acutal: 7\n",
+      "Casilla actual: (1, 1)\n",
+      "Dirección actual: oeste\n",
+      "Casillas adyacentes seguras: [(0, 1), (2, 1), (1, 0), (1, 2)]\n",
+      "Casillas visitadas: [(0, 0), (1, 0), (1, 1), (2, 0), (2, 1)]\n",
+      "¿El oro ha sido tomado?:  False\n",
+      "¿El wumpus sigue con vida?:  True\n",
+      "Casillas opcionales: [(0, 1), (1, 2)]\n",
+      "El agente quiere ir a la casilla (0, 1)\n",
+      "\n",
+      "Turno acutal: 8\n",
+      "Casilla actual: (0, 1)\n",
+      "Dirección actual: oeste\n",
+      "Casillas adyacentes seguras: [(1, 1), (0, 0), (0, 2)]\n",
+      "Casillas visitadas: [(0, 0), (0, 1), (1, 0), (1, 1), (2, 0), (2, 1)]\n",
+      "¿El oro ha sido tomado?:  False\n",
+      "¿El wumpus sigue con vida?:  True\n",
+      "Casillas opcionales: [(0, 2)]\n",
+      "El agente quiere ir a la casilla (0, 2)\n",
+      "\n",
+      "Turno acutal: 10\n",
+      "Casilla actual: (0, 2)\n",
+      "Dirección actual: norte\n",
+      "Casillas adyacentes seguras: [(1, 2), (0, 1)]\n",
+      "Casillas visitadas: [(0, 0), (0, 1), (0, 2), (1, 0), (1, 1), (2, 0), (2, 1)]\n",
+      "¿El oro ha sido tomado?:  False\n",
+      "¿El wumpus sigue con vida?:  True\n",
+      "Casillas opcionales: [(1, 2)]\n",
+      "El agente quiere ir a la casilla (1, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "# ejecuta el juego \n",
     "\n",
-    "for i in range(30):\n",
-    "    a = agente.reaccionar_wkb()\n",
+    "for i in range(10):\n",
+    "    a = agente.reaccionar_wkb(DEB=True) # DEB = False by default\n",
     "    formula_accion = f'{a}_{agente.turno-1}'\n",
     "    agente.base.TELL(formula_accion)\n",
     "    W.transicion(a)\n",
@@ -139,10 +225,10 @@
     "        print(W.mensaje)\n",
     "        break\n",
     "    agente.estimar_estado_wkb(W)\n",
-    "    clear_output(wait=True)\n",
-    "    W.pintar_todo()\n",
-    "    plt.show()\n",
-    "    sleep(.25) "
+    "    #clear_output(wait=True)\n",
+    "    #W.pintar_todo()\n",
+    "    #plt.show()\n",
+    "    #sleep(.3) "
    ]
   }
  ],
@@ -156,7 +242,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
   "orig_nbformat": 4
