--- a/AI/Notebook 9 - Redes bayesianas/nb9.ipynb
+++ b/AI/Notebook 9 - Redes bayesianas/nb9.ipynb
@@ -2091,9 +2091,9 @@
    ],
    "source": [
     "# dibuja laa red con la tablas de probabilidad condicional\n",
-    "gnb.sideBySide(bn.cpt('Robo'), bn.cpt('Temblor'), gnb.sideBySide(captions=['']), gnb.sideBySide(captions=[''])), \n",
+    "gnb.sideBySide(bn.cpt('Robo'), bn.cpt('Temblor')), \n",
     "gnb.sideBySide(gnb.sideBySide(captions=['']), gnb.getBN(bn, size = '4!'), bn.cpt('Alarma')), \n",
-    "gnb.sideBySide(bn.cpt('JuanLlama'), bn.cpt('MariaLlama'), gnb.sideBySide(captions=['']), gnb.sideBySide(captions=['']))"
+    "gnb.sideBySide(bn.cpt('JuanLlama'), bn.cpt('MariaLlama'))"
    ]
   },
   {
