update notebook proyecto3

--- a/AI/Miniproyecto 3 - redes decision/miniproyecto_3.ipynb
+++ b/AI/Miniproyecto 3 - redes decision/miniproyecto_3.ipynb
@@ -160,8 +160,8 @@
     "\n",
     "$$\n",
     "U(\\text{casilla}(x,y)) = \\begin{cases}\n",
-    "1, & \\text{si }Oro(x,y), \\land \\neq Wumpus(x,y) \\neq Pozo(x,y) \\\\\n",
-    "0, & \\text{si }\\neg Pozo(x,y) \\land \\neq Wumpus(x,y) \\\\\n",
+    "1, & \\text{si }Oro(x,y), \\land \\neg Wumpus(x,y) \\neg Pozo(x,y) \\\\\n",
+    "0, & \\text{si }\\neg Pozo(x,y) \\land \\neg Wumpus(x,y) \\\\\n",
     "-1, & \\text {si } Pozo(x,y) \\lor Wumpus(x,y)\n",
     "\\end{cases}\n",
     "$$\n",
