update notebook proyecto3

--- a/AI/Miniproyecto 3 - redes decision/miniproyecto_3.ipynb
+++ b/AI/Miniproyecto 3 - redes decision/miniproyecto_3.ipynb
@@ -483,7 +483,18 @@
    "source": [
     "Es necesario mencionar, que se debe inicializar el problema dando la evidencia del pozo y el wumpus en la posición inicial: esto es, inicializar la variable evidencia como: \n",
     "\n",
-    "`evidencia = {'pozo(0, 0)':0, 'wumpus(0, 0)':0}`"
+    "```\n",
+    "evidencia = {'pozo(0, 0)':0, 'wumpus(0, 0)':0}. \n",
+    "```\n",
+    "\n",
+    "Además, también es necesario modificar la ejecución del programa, tal que se incluya la evidencia de las nuevas variables en cada iteración. Esto es, incluir dentro del ciclo `for` de ejecución los condicionales: \n",
+    "\n",
+    "```\n",
+    "if 'hedor' in agente.perceptos:                         \n",
+    "    agente.evidencia['hedor'+str(casilla_actual)] = 1  \n",
+    "else:                                                   \n",
+    "    agente.evidencia['hedor'+str(casilla_actual)] = 0\n",
+    "```\n"
    ]
   },
   {
@@ -518,7 +529,7 @@
     "\n",
     "W = Wumpus(wumpus=(0,2), oro=(3,3), pozos=[(2,0), (3,2)])\n",
     "agente = Agente()\n",
-    "evidencia = {'pozo(0, 0)':0, 'wumpus(0, 0)':0}\n",
+    "evidencia = {'pozo(0, 0)':0, 'wumpus(0, 0)':0} # modificado\n",
     "casillas_seguras = []\n",
     "setattr(Agente, \"evidencia\", evidencia)\n",
     "setattr(Agente, \"seguras\", casillas_seguras)\n",
@@ -546,10 +557,10 @@
     "        agente.evidencia['brisa'+str(casilla_actual)] = 1\n",
     "    else:\n",
     "        agente.evidencia['brisa'+str(casilla_actual)] = 0     \n",
-    "    if 'hedor' in agente.perceptos:                         # new\n",
-    "        agente.evidencia['hedor'+str(casilla_actual)] = 1   # new\n",
-    "    else:                                                   # new\n",
-    "        agente.evidencia['hedor'+str(casilla_actual)] = 0   # new\n",
+    "    if 'hedor' in agente.perceptos:                         # nuevo\n",
+    "        agente.evidencia['hedor'+str(casilla_actual)] = 1   # nuevo\n",
+    "    else:                                                   # nuevo\n",
+    "        agente.evidencia['hedor'+str(casilla_actual)] = 0   # nuevo\n",
     "    print(\"Evidencia: \", agente.evidencia)\n",
     "    a = agente.reaccionar(DEB=False)\n",
     "    print(\"Accion: \", a)\n",
